# ai_voice_calling_agent

./: .env  ai_prompts.py  audio_to_text.py  base64_to_audiofile.py  graph.py  prompts.py  pyproject.toml  requirements.txt  server.py  stt.py  tts.py  voice_agent.py  voicelink.py
new_agent/: graph.py  server.py  stt.py  test.py  tts.py  voicelink.py
websockets/: client.py  server.py
