[project]
name = "ai-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "sarvamai>=0.1.28",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "uvicorn>=0.49.0",
    "websocket>=0.2.1",
]
